2013-02-06
-added fsp3 (fraction of sp3 carbons)
-added rounding of MW, logP and fsp3 to 3 decimals
-added histograms for fsp3, rotatable bonds and complexity

2013-02-07
-added search by class
-cosmetic changes

2013-02-12
-updated bootstrap
-added login/logout functionality

2013-02-13
-changed license to BSD license

2013-02-16
-renamed names of some variables to be more descriptive

2013-03-04
-added addmols.py to support uploading
-added upload of single molecule (not fully functional yet)

2013-03-06
-updated README and INSTALL

2013-03-12
-removed redundant js and updated bootstrap and chemdoole web

2013-03-16
-replaced Bootstrap with Foundation, unfortunately it still doesn't fix broken
search page in Chrome
