@@ -71,7 +71,7 @@
       <section class="top-bar-section">
         <ul class="left">
           <li class="divider"></li>
-          <li><a href="{{servername}}/"><i class="icon-home"></i>Home</a></li>
+          <li><a href="{{servername}}/"><i class="icon-home"></i></a></li>
           <li class="divider"></li>
           <li><a href="{{servername}}/search.html"><i class="icon-search"></i>Search</a></li>
           <li class="divider"></li>
@@ -93,8 +93,8 @@
 </div>
 
 </div>
-<div id="footer" class="row">
-<p><small><a href="https://github.com/samoturk/openmolDB">OpenMolDB</a> v0.2. Code: <a href="https://twitter.com/samoturk">Samo Turk</a>. BSD License. Uses: <a href="http://www.djangoproject.com">Django</a>, <a href="http://openbabel.org">OpenBabel</a>, <a href="http://jquery.com">jQuery</a>, <a href="http://foundation.zurb.com/">Foundation</a>, <a href="http://web.chemdoodle.com/">ChemDoodle</a>, <a href="http://www.flotcharts.org/">Flot</a> and <a href="http://fortawesome.github.com/Font-Awesome/">Font Awesome</a></small></p>
+<div class="row">
+<div id="footer" class=row><small><a href="https://github.com/samoturk/openmolDB">OpenMolDB</a> v0.2. Code: <a href="https://twitter.com/samoturk">Samo Turk</a>. BSD License. Uses: <a href="http://www.djangoproject.com">Django</a>, <a href="http://openbabel.org">OpenBabel</a>, <a href="http://jquery.com">jQuery</a>, <a href="http://foundation.zurb.com/">Foundation</a>, <a href="http://web.chemdoodle.com/">ChemDoodle</a>, <a href="http://www.flotcharts.org/">Flot</a> and <a href="http://fortawesome.github.com/Font-Awesome/">Font Awesome</a></small></div>
 </div>
 
 </body>
