@@ -13,18 +13,16 @@
 </header>
 <section id="mainContent">
     <div class="row">
-    <div class="columns">
         <h4>Do you just want to casually browse the database? No problem!</h4>
         <p>
             <a href="{{servername}}/browse.html" class="button"><i class="icon-list-alt"></i> Browse!</a>
         </p>
     </div>
-    <div class="columns">
+    <div class="row">
         <h4>Curious about the properties of compounds in the databse? Have a look!</h4>
         <p>
             <a href="{{servername}}/stats.html" class="button"><i class="icon-bar-chart"></i> Statistics!</a>
         </p>
-    </div>
     </div>
 </section>
     </div>
